# slurm

./: 1  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.ac.bkp  ports.txt  scratch.txt  tags  todo.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
auxdir/: Makefile.in
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/pam/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/phpext/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/slurmdb-direct/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
etc/: slurmirmd.service.in
slurm/: slurm.h.in  slurm_errno.h  slurmdb.h
src/: Makefile.am  Makefile.in  tags
src/api/: Makefile.in  reservation_info.c
src/common/: .slurm_errno.c.swp  .slurm_protocol_api.c.swp  .slurm_protocol_defs.h.swp  (+25 more)
src/plugins/sched/ischeduler/: .irm_agent.c.swp  .ischeduler.c.swp  .ischeduler.h.swp  .ischeduler_wrapper.c.swp  .process_rsrc_offer.c.swp  .protocol_api.c.swp  Makefile.am  Makefile.in  a.out  common.c  feedback_agent.c  irm_agent.c  ischeduler.c  ischeduler.h  ischeduler_wrapper.c  ping_agent.c  process_rsrc_offer.c  protocol_api.c  protocol_testing.c  test.c
src/slurmirmd/: .controller.c.swp  .feedback_agent.c.swp  .rsrc_offer.c.swp  Makefile.am  Makefile.am.bkp  Makefile.in  controller.c  feedback_agent.c  protocol_testing.c  rsrc_offer.c  slurmirmd.h
testsuite/: Makefile.in
(+235 files in other folders)
